# crab-control-center

./: Cargo.toml  README.md  index.html  pressure_graph.py
.github/workflows/: ci.yml
crab-httpapi/: Cargo.toml
crab-httpapi/src/: alert.rs  crab.html  emotionmanager.rs  lib.rs  puzzle.rs
rfc-quiz/: .gitignore  Cargo.toml  Readme.md
rfc-quiz/src/: main.rs
src/: crab.html  emotionmanager.rs  fieldbus.rs  graphql.rs  httpapi.rs  logic.rs  main.rs  timers.rs  visuals.rs
