[package]
name = "crab-control-center"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
publish = false

[dependencies]
env_logger = { version = "0.11.5", default-features = false, features = ["color", "auto-color"] }
log = "0.4.22"
process-image = "0.2.1"

profirust = { git = "https://github.com/rahix/profirust", version = "0.4.0", default-features = false, features = ["phy-serial"], optional = true }

eframe = { version = "0.30.0", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = { version = "0.30.0", optional = true }
egui_extras = { version = "0.30.0", optional = true, features = ["image"], default-features = false }

[features]
visuals = ["dep:eframe", "dep:egui", "dep:egui_extras"]
fieldbus = ["dep:profirust"]
default = ["visuals"]
