[package]
name = "crab-control-center"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
publish = false

[dependencies]
env_logger = { version = "0.11.5", default-features = false, features = [
    "color",
    "auto-color",
] }
log = "0.4.22"
process-image = "0.2.1"

profirust = { version = "0.5.0", default-features = false, features = [
    "phy-serial",
    "std",
], optional = true }

eframe = { version = "0.30.0", optional = true, default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = { version = "0.30.0", optional = true }
egui_extras = { version = "0.30.0", optional = true, features = [
    "image",
], default-features = false }
vader-sentimental = "0.1.1"
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
utoipa = { version = "5.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
utoipa-axum = "0.1.3"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
juniper = { version = "0.16.1", features = ["schema-language"] }
juniper_axum = "0.1.1"

[features]
visuals = ["dep:eframe", "dep:egui", "dep:egui_extras"]
fieldbus = ["dep:profirust"]
default = ["visuals"]
