[package]
name = "crab-httpapi"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
publish = false

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1.42.0", features = ["rt", "parking_lot"] }
utoipa = { version = "5.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0.2"
rand = "0.9.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
juniper = { version = "0.16.1", features = ["schema-language"] }
juniper_axum = { version = "0.2", features = ["subscriptions"] }
cfg-if = "1.0.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
juniper_graphql_ws = "0.4.0"
tokio-stream = "0.1.17"
sha1 = "0.10.6"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "1.1.0"
metrics = { version = "0.24.3", default-features = false }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
log = "0.4.22"
